# upflow

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  Upflow.bat  pyproject.toml
app/: config.py  exceptions.py  main.py  models.py  schemas.py  security.py
app/api/: capability_routes.py  routes.py
app/core/: version.py
app/services/: audio_job_manager.py  audio_pipeline.py  backend_registry.py  capability_probe.py  device_router.py  device_semaphores.py  devices_service.py  generation_installer.py  generation_job_manager.py  gpu_session_coordinator.py  hf_client.py  job_manager.py  media_tools.py  model_converter.py  model_installer.py  model_registry.py  onnx_cpu_fallback_probe.py  process_runner.py  progress.py  restorer_registry.py  retention_sweeper.py  stall_watchdog.py  storage.py  stream_analysis.py  update_service.py  video_encoders.py  video_job_manager.py  video_upscaler.py
app/services/engines/: apollo_restore.py  audio_enhance.py  audiosr_restore.py  base.py  generation_onnx.py  gmfss_engine.py  multichannel_layouts.py  multichannel_restore.py  onnx_upscaler.py  onnx_video_upscaler.py  realesrgan_ncnn.py  rife_ncnn.py
app/services/engines/audiosr/: __init__.py  assets.py  ddim.py  driver.py  dsp.py
app/services/engines/gmfss/: __init__.py  assets.py  pipeline.py  softsplat.py  softsplat_cl.py
app/static/: styles.css
app/templates/: index.html
app/web/: routes.py
docs/: IMPLEMENTATION_PLAN.md  REALTIME_MODULE.md  RESEARCH_ANIME_SUITE.md  RESEARCH_AUDIO_RESTORATION.md  RESEARCH_GMFSS_PORT.md  RESEARCH_V2_HF_REALTIME.md
docs/superpowers/plans/: 2026-07-14-sp1-modelos-hf-dispositivos.md  2026-07-15-sp2-ui-react.md  2026-07-15-sp3-instalador.md  2026-07-15-sp5-progreso-eta.md  2026-07-16-sp10-job-cancel.md  2026-07-16-sp7-multigpu.md  2026-07-16-sp8-auto-update.md  2026-07-16-sp9-audio-section.md  2026-07-17-sp11-onnx-backend-selector.md  2026-07-17-sp13-audiosr-core.md  2026-07-18-sp14-gmfss-port.md  2026-07-19-audio-tracks-subs-quality.md  2026-07-20-gmfss-production-performance.md  2026-07-21-optimization-center.md  2026-07-22-generation-module.md
docs/superpowers/specs/: 2026-07-14-upflow-v2-ux-design.md  2026-07-19-audio-tracks-subs-quality-design.md  2026-07-20-gmfss-production-performance-design.md  2026-07-21-optimization-center-design.md  2026-07-22-generation-module-design.md  2026-07-22-optimum-spike-findings.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AccordionSection.test.tsx  AccordionSection.tsx  AppShell.test.tsx  AppShell.tsx  DeterminateProgressBar.tsx  DevicePicker.test.tsx  DevicePicker.tsx  EncoderPicker.test.tsx  EncoderPicker.tsx  FormatOptionFieldset.test.tsx  FormatOptionFieldset.tsx  IndeterminateProgressBar.tsx  JobCard.test.tsx  JobCard.tsx  JobDetailModal.test.tsx  JobDetailModal.tsx  JobQueue.test.tsx  JobQueue.tsx  Modal.test.tsx  Modal.tsx  ModelPicker.test.tsx  ModelPicker.tsx  RuntimePicker.test.tsx  RuntimePicker.tsx  SlowPresetCostHint.test.tsx  SlowPresetCostHint.tsx  Tooltip.test.tsx  Tooltip.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx
frontend/src/hooks/: useAudioJob.test.tsx  useAudioJob.ts  useCapabilities.test.tsx  useCapabilities.ts  useDebouncedValue.test.ts  useGenerationJob.test.tsx  useGenerationJob.ts  useImageJob.test.tsx  useImageJob.ts  useJobQueue.test.tsx  useJobQueue.ts  useModels.test.tsx  useModels.ts  useUpdateCheck.test.tsx  useUpdateCheck.ts  useVideoJob.test.tsx  useVideoJob.ts
frontend/src/lib/: api.test.ts  api.ts  apiTypes.ts  audioLabels.ts  eta.test.ts  eta.ts  formatDuration.test.ts  formatDuration.ts  formatFps.test.ts  formatFps.ts  installStatus.test.ts  installStatus.ts  jobProgress.test.ts  jobProgress.ts  jobQueueStore.test.ts  jobQueueStore.ts  jobStatus.test.ts  jobStatus.ts  jobTypeGuards.test.ts  jobTypeGuards.ts  navigation.ts  sizeFormat.test.ts  sizeFormat.ts
frontend/src/modules/audio/: AudioPage.tsx  AudioPanel.test.tsx  AudioPanel.tsx
frontend/src/modules/enhance/: AudioEnhanceControls.test.tsx  AudioEnhanceControls.tsx  FpsBoostControls.test.tsx  FpsBoostControls.tsx  ImagePanel.test.tsx  ImagePanel.tsx  InterpEngineControls.test.tsx  InterpEngineControls.tsx  ScaleFormatControls.test.tsx  ScaleFormatControls.tsx  TrackSelector.test.tsx  TrackSelector.tsx  VideoPanel.tsx  (+4 more)
frontend/src/pages/: EnhancePage.test.tsx  EnhancePage.tsx  ModelsPage.test.tsx  ModelsPage.tsx  RealtimePage.tsx  SettingsPage.tsx
frontend/src/services/: audio.test.ts  audio.ts  generation.test.ts  generation.ts  update.ts
installer/: README.md  upflow.iss
scripts/: download-apollo.ps1  download-audiosr-onnx.ps1  download-deepfilternet.ps1  download-ffmpeg.ps1  download-gmfss-onnx.ps1  download-realesrgan-onnx.ps1  download-realesrgan.ps1  download-rife.ps1  export-realesrgan-onnx.py  package-release.ps1  setup.ps1  spike_optimum_directml.py  upflow-launcher.ps1
tests/: conftest.py  test_allowed_origins_default.py  test_apollo_restore.py  test_audio_config.py  test_audio_enhance_api.py  test_audio_enhance_engine.py  test_audio_enhance_pipeline.py  test_audio_enhance_wiring.py  test_audio_output_format.py  test_audio_pipeline.py  test_audio_restore_config.py  test_audio_subtitle_mux.py  test_audiosr_driver.py  test_audiosr_restorer.py  test_audit_minors.py  test_auto_route.py  test_backend_selection.py  test_capability_probe.py  test_capability_routes.py  test_cleanup.py  test_concurrency.py  test_device_router.py  test_device_semaphores.py  test_devices.py  test_error_handling.py  test_filename_sanitization.py  test_fps_boost_api.py  test_fps_math.py  test_frame_stall_watchdog.py  test_generation_api.py  test_generation_engine.py  test_generation_installer.py  test_generation_job_manager.py  test_gmfss_engine.py  test_gpu_session_coordinator.py  test_health.py  test_hf_client.py  test_interp_engine.py  test_job_cancel.py  test_job_status_routes.py  (+37 more)
tools/onnx-export/: export_uint8.py  pipeline.py  setup_validate.py
(+23 files in other folders)
