[project]
name = "upflow"
version = "0.6.0"
description = "Modern AI upscaling + frame interpolation for AMD GPUs — Vulkan-native, FastAPI, web UI + REST API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pillow>=10.4.0,<11.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  # SP8 - update_service.py compares release tags with packaging.version.Version.
  # Declared explicitly: it was only reaching the env transitively, which a
  # fresh embedded-Python install can't be relied on to reproduce.
  "packaging>=23.0",
  "aiofiles>=24.1.0,<25.0.0",
  "httpx>=0.27.0,<1.0.0",
  "numpy>=1.26.0,<3.0.0",
  "onnxruntime-directml>=1.19.0,<2.0.0; sys_platform == 'win32'",
  # SP1 Task 6 - .pth/.safetensors -> ONNX conversion (app/services/model_converter.py).
  # torch is unpinned to a CUDA index on purpose: plain PyPI already resolves
  # to a CPU-capable wheel and this only ever runs the export/inference
  # graph on CPU. `onnx` (the protobuf graph library, distinct from
  # `onnxruntime`) is a transitive hard requirement of torch.onnx.export
  # itself, not something this module calls directly.
  "torch>=2.2.0,<3.0.0",
  "spandrel>=0.4.0,<1.0.0",
  "onnx>=1.16.0,<2.0.0",
  # SP9 - Apollo audio restore (app/services/engines/apollo_restore.py) reads
  # audio via soundfile and resamples to 44.1k via scipy.signal.resample_poly.
  "soundfile>=0.12.0,<1.0.0",
  "scipy>=1.11.0,<2.0.0",
  # SP11 - motor ONNX de video (onnx_video_upscaler.py) usa cv2.imread/imwrite
  # para I/O de frames PNG: mucho mas rapido que PIL (PIL era el cuello,
  # ~3.15s/frame en 5K). headless = sin deps de GUI, ~40MB.
  "opencv-python-headless>=4.10.0,<5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
